--- a/views/openclose.ejs
+++ b/views/openclose.ejs
@@ -1,6 +1,4 @@
-<header>
-  <img class="w-100" <script src="images/bottomcircleUD.png"></script>
-</header>
+<header><img class="w-100" src="images/bottomcircleUD.png"></img></header>
 
 <h1>UmmAhh - Social Media Gateway</h1>
 <p></p>
