--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,6 +1,4 @@
-<header>
-  <img class="w-100" <script src="images/bottomcircleUD.png"></script>
-</header>
+<header><img class="w-100" src="images/bottomcircleUD.png"></img></header>
 
 <div class="row">
   <div class="col-sm-6"> <!-- This line splits the page in half so that there are two seperate columns on the page-->
