--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,3 +1,5 @@
+<header><img class="w-100" src="images/bottomcircleUD.png"></img></header>
+
 <div class="row">
     <div class="col s12 m6 offset-m3">
         <div class="card darken-1">
@@ -45,3 +47,5 @@
         </div>
     </div>
 </div>
+
+<footer><img class="w-100" src="images/bottomcircle.png"></img></footer>
