--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<header><div class="circle"></div></header>
+<header><img class="w-100" src="images/bottomcircleUD.png"></img></header>
 
 <div class="row">
     <div class="col-sm-6">
