--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,25 +14,23 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <!-- Custom fonts for this template -->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:700" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="/css/style.css" rel="stylesheet">
+  <link href="/css/styles.css" rel="stylesheet">
 
 </head>
 
 <body>
-  <header><div class="circle"></div></header>
+
 
   <main>
         <%- body %>
       </main>
-        <footer><div class="circle2"></div></footer>
+        
 
     </body>
 
